# E2SAR

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CLAUDE.md  Dockerfile.cli  Dockerfile.dev  Doxyfile  LICENSE  README.md  RELEASE-NOTES.md  VERSION.txt  docker-dev-entrypoint.sh  meson.build  meson_options.txt  reassembler_config.ini  segmenter_config.ini  setup_compile_env.sh  setup_compile_env_conda.sh
e2sar-java/: .gitignore  CMakeLists.txt  meson.build  pom.xml
e2sar-java/include/: jniDpReassembler.hpp  jniDpSegmenter.hpp  jniLbManager.hpp  jnie2sar.hpp  jnie2sarEjfatUri.hpp  jnie2sarHelper.hpp
e2sar-java/src/cpp/: jniDpReassembler.cpp  jniDpSegmenter.cpp  jniLbManager.cpp  jnie2sar.cpp  jnie2sarEjfatUri.cpp  jnie2sarHelper.cpp
e2sar-java/src/main/java/org/jlab/hpdf/: E2sarUtil.java  EjfatURI.java  LbManager.java  Reassembler.java  Segmenter.java
e2sar-java/src/main/java/org/jlab/hpdf/cli/: Lbadm.java
e2sar-java/src/main/java/org/jlab/hpdf/config/: ReassemblerFlags.java  SegmenterFlags.java
e2sar-java/src/main/java/org/jlab/hpdf/exceptions/: E2sarNativeException.java
e2sar-java/src/main/java/org/jlab/hpdf/messages/: LBOverview.java  LBStatus.java  LostEvent.java  ReassembledEvent.java  RecvStats.java  SendStats.java  SyncStats.java  WorkerStatus.java
e2sar-java/src/test/java/org/hpdf/: E2sarLbCpTest.java
e2sar-java/src/test/java/org/jlab/hpdf/: E2sarEjfatUriTest.java  E2sarLbCpTest.java  E2sarSegmenterTest.java
e2sar-java/src/test/java/org/jlab/hpdf/live/: E2sarLbCpLiveTest.java  E2sarSyncLiveTest.java
e2sar-java/src/test/java/org/jlab/hpdf/unit/: E2sarEjfatUriTest.java  E2sarLbCpTest.java  E2sarReassemblerTest.java  E2sarSegmenterTest.java  E2sarSyncTest.java
fec/: .gitignore  BATCH_FEC_IMPLEMENTATION.md  BATCH_FEC_OPTIMIZATION_PLAN.md  BATCH_FEC_SUMMARY.md  BUILDING.md  CLAUDE.md  MESON_CONFIGURATION.md  PERFORMANCE_RESULTS.md  README.md  meson.build  meson.standalone.build
fec/docs/: e2sar_fec_hooks.md  fec_b2b_test_design.md  pull_request_template.md
fec/docs/fec_docs/: FEC Code Word Bit Mapping.drawio  FEC Segment Mapping.drawio  README.FEC.FRAMING.md
fec/interleaver/: .gitignore  CMakeLists.txt  E2SAR_INTEGRATION.md  NEON_DESIGN.md  meson.build
fec/interleaver/include/fec/: deinterleaver.h  fec_block.h  interleaver.h  pipeline.h  rs_decode.h  rs_encode.h
fec/interleaver/src/: deinterleaver.cpp  interleaver.cpp  interleaver_metal.mm  pipeline.cpp  rs_decode.cpp  rs_decode_c.c  rs_decode_c.h  rs_encode.cpp  rs_encode_metal.mm
fec/interleaver/test/: main.cpp  stream_bench.cpp
fec/plans/: fec_test_coverage_plan.md
fec/prototype/python/: Gpermutations.py  adjoint_inverse.py  genMatrix_simplified.py  old_code.py
fec/pseudocode/: dual_nibble_encoder.txt  sve_implementation_plan.txt
fec/src/: .gitignore  Makefile  PERFORMANCE_ANALYSIS.md  ejfat_rs.h  test.c  test_avx2_enc  test_dual_nibble  test_enc_dec.c  test_single_nibble_verify.c  verify_gf_mul
fec/src.old/: test_avx2_enc  test_avx2_enc_dec  test_neon_enc
fec/src/avx2/: ejfat_rs_avx2.h
fec/src/avx512/: ejfat_rs_avx512.h  ejfat_rs_avx512_decoder.h  ejfat_rs_avx512_encoder.h
fec/src/common/: ejfat_rs.h  ejfat_rs_common.h  ejfat_rs_decoder.h
fec/src/neon/: ejfat_rs_neon.h  ejfat_rs_neon_common.h  ejfat_rs_neon_decoder.h
fec/src/tests/: DECODER_TESTS_README.md  TEST_SUITE_SUMMARY.txt  decoder_test_common.h  test.c  test_avx2.c  test_avx512.c  test_batch.c  test_decoder_all_tests.c  test_decoder_basic.c  test_decoder_data.c  test_decoder_errors.c  test_decoder_patterns.c  test_decoder_roundtrip.c  test_enc_dec.c  test_neon.c  test_neon_enc.c  test_performance.c  test_unpacked.c  verify_gf_mul.c
fec/src_tidy/common/: ejfat_rs_decoder.h
fec/src_tidy/neon/: ejfat_rs_neon_encoder.h
fec/src_tidy/tests/: test_avx2_enc_dec.c  test_avx2_optimization.c  test_avx512_enc.c
fec/test_vectors/: generate_test_vectors.py  interleave_vectors.json  pipeline_vectors.json  rs_cw_vectors.json  test_vectors.h
fec/test_vectors/fpga/: README.md  pipeline_ch1_codewords.hex  pipeline_ch1_parity_segs.hex  pipeline_ch1_segments.hex  rs_cw_input.hex  rs_cw_parity.hex
packetblast/: README.md  meson.build
packetblast/python/: test_bindings.py
packetblast/src/: ejfat_assemble_ersap.hpp  ejfat_network.hpp  ejfat_packetize.hpp
packetblast/src/python_bindings/: py_ejfat_packetize.cc
src/: .gitignore  Makefile  cp-api.cpp  e2sarAffinity.cpp  e2sarCP.cpp  e2sarDP.cpp  e2sarDPReassembler.cpp  e2sarDPSegmenter.cpp  e2sarHeaders.hpp  e2sarNetUtil.cpp  e2sarUtil.cpp  ejfat_rs.h  ejfat_rs_avx2.h  ejfat_rs_avx2_decoder.h  ejfat_rs_avx2_encoder.h  ejfat_rs_avx512.h  ejfat_rs_avx512_encoder.h  ejfat_rs_neon.h  ejfat_rs_neon_common.h  ejfat_rs_neon_decoder.h  ejfat_rs_neon_encoder.h  encode.c  meson.build  test  test.c  test_avx2.c  test_avx2_dec.c  test_avx2_enc.c  test_avx2_enc_dec.c  test_avx2_optimization.c  test_avx512.c  test_avx512_enc.c  test_dual_nibble  test_dual_nibble.c  test_neon.c  test_neon_dec.c  test_neon_enc.c  test_neon_enc_dec.c  test_single_nibble_verify  verify_gf_mul.c
src/grpc/: install.sh  meson.build
src/neon/: ejfat_rs_neon_decoder.h
src/pybind/: meson.build  py_e2sar.cpp  py_e2sarAffinity.cpp  py_e2sarCP.cpp  py_e2sarDP.cpp  py_e2sarHeaders.cpp  py_e2sarUtil.cpp
src/tests/: test_avx2.c  test_dual_nibble.c  test_neon.c  test_single_nibble_verify.c  verify_matrix.c
test/: README.md  boost_test.cpp  e2sar_boost_test.cpp  e2sar_fec_bench.cpp  e2sar_lbcp_live_test.cpp  e2sar_lbcp_test.cpp  e2sar_netutil_test.cpp  e2sar_opt_test.cpp  e2sar_perf.cpp  e2sar_reas_live_test.cpp  e2sar_reas_test.cpp  e2sar_seg_live_test.cpp  e2sar_seg_test.cpp  e2sar_sync_live_test.cpp  e2sar_sync_test.cpp  e2sar_test.cpp  e2sar_uri_test.cpp  mem_tests.cpp  meson.build  test_boost_log.cpp
test/py_test/: README.md  pytest.ini  segmenter_config.ini  test_CPToken.py  test_DPReassembler.py  test_DPSegmenter.py  test_DPSegmenter_segmenter.py  test_Optimizations.py  test_affinity.py  test_b2b_DP.py  test_ejfatURI.py  test_ejfatUtil_optimizations.py  test_fec_b2b.py  test_live_LBManager.py
(+208 files in other folders)
